aarch64: try fix things

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,10 +25,14 @@ if(TARGET_CPU MATCHES "x86_64")
     set(TARGET_BITS 64)
     set(GCC_ARCH "x86-64" CACHE STRING "GCC architecture levels for x86_64 target.")
     string(REGEX MATCH "-v3" x86_64_LEVEL ${GCC_ARCH})
-else()
+elseif(TARGET_CPU MATCHES "x86")
     set(TARGET_CPU_FAMILY "x86")
     set(TARGET_BITS 32)
     set(GCC_ARCH "i686")
+elseif(TARGET_CPU MATCHES "aarch64")
+    set(TARGET_CPU_FAMILY "aarch64")
+elseif(TARGET_CPU MATCHES "arm")
+    set(TARGET_CPU_FAMILY "arm")
 endif()
 
 processorcount(CPU_COUNT)
